# horizon

./: setup.cfg
doc/source/install/: from-source.rst
horizon/locale/de/LC_MESSAGES/: django.po  djangojs.po
horizon/locale/eo/LC_MESSAGES/: djangojs.po
horizon/locale/fi_FI/LC_MESSAGES/: django.po
horizon/locale/fr/LC_MESSAGES/: django.po
horizon/locale/id/LC_MESSAGES/: django.po  djangojs.po
horizon/locale/ko_KR/LC_MESSAGES/: djangojs.po
horizon/locale/pt_BR/LC_MESSAGES/: django.po  djangojs.po
horizon/locale/ru/LC_MESSAGES/: django.po  djangojs.po
horizon/locale/sl_SI/LC_MESSAGES/: django.po
horizon/locale/sr/LC_MESSAGES/: django.po
openstack_auth/locale/ru/LC_MESSAGES/: django.po
openstack_dashboard/locale/as/LC_MESSAGES/: django.po
openstack_dashboard/locale/bn_IN/LC_MESSAGES/: django.po
openstack_dashboard/locale/brx/LC_MESSAGES/: django.po
openstack_dashboard/locale/cs/LC_MESSAGES/: django.po  djangojs.po
openstack_dashboard/locale/de/LC_MESSAGES/: django.po  djangojs.po
openstack_dashboard/locale/en_AU/LC_MESSAGES/: django.po
openstack_dashboard/locale/en_GB/LC_MESSAGES/: django.po
openstack_dashboard/locale/eo/LC_MESSAGES/: django.po
openstack_dashboard/locale/es/LC_MESSAGES/: django.po
openstack_dashboard/locale/fr/LC_MESSAGES/: django.po
openstack_dashboard/locale/gu/LC_MESSAGES/: django.po
openstack_dashboard/locale/hi/LC_MESSAGES/: django.po
openstack_dashboard/locale/id/LC_MESSAGES/: django.po
openstack_dashboard/locale/it/LC_MESSAGES/: django.po
openstack_dashboard/locale/ja/LC_MESSAGES/: django.po
(+21 files in other folders)
